added update functionality
